# TDD_framework

./: .gitignore  CodeStatistics.py  KeyPressThread.py  LICENSE  README.md  TDDConfig.py  cmakeSupport.py  mainMenu.py  makeItWork.bat  start.bat  start.sh  tdd_support.py  testSetups.ini  winEnvCfg.bat  winEnvCfgTemplate.bat
.githooks/: pre-commit
TESTs/BitInverter_Tpkg/: test.ini
TESTs/CAdcDrv_Tpkg/: test.ini
TESTs/CCalculator_Tpkg/: test.ini
TESTs/CCrcDrv_Tpkg/: test.ini
TESTs/CHuamaker_Tpkg/: test.ini
TESTs/CHuamaker_Tpkg/debug/: .gitignore  CMakeLists.txt  build.bat  build.sh
TESTs/CHuamaker_automock_Tpkg/: test.ini
TESTs/CPencil_Tpkg/: test.ini
TESTs/CResident_Tpkg/: test.ini
TESTs/CUartDrv_Tpkg/: test.ini
TESTs/CWdgDrv_Tpkg/: test.ini
TESTs/CircBuff_Tpkg/: test.ini
TESTs/Huamaker_Tpkg/: CMakeLists.txt  test.ini
TESTs/Stubs/: CHalIWdg.cpp  CHalUartIt.cpp  CHalWWdg.cpp  IHal.cpp  IHalNonBlocking.cpp
TESTs/templates/: AllTests.cpp
Tools/: .gitignore  envPath_bckp.ini  project_bckp.ini
Tools/TestConfigs/: default.tcfg
Tools/defaults/: bashEnvCfgTemplate.sh  envPathTemplate.ini
Tools/etdd/: README.md  setup.py
Tools/mtdd/: Makefile  setup.py
Tools/sources/: startTddTool.py  tdd_core.py  testMenu.py
Tools/tdd/: devVersion.txt  test_tdd.bat
project/BitInverter/: BitInverter.c  BitInverter.h
project/CircBuff/: CircBuff.cpp  CircBuff.hpp
project/DrvUart/: CDriverUart.cpp  CDriverUart.hpp  CHalUart.hpp  IDriver.hpp  IDriverUart.hpp  IHal.hpp  IHalUart.hpp  IHalUartObserver.hpp  IUartObserver.h
project/HuaMaker/: CHuamaker.cpp  (+3 more)
(+102 files in other folders)
